fix: corrigido overflow barra de pesquisa

--- a/css/components/campos.css
+++ b/css/components/campos.css
@@ -8,7 +8,7 @@
   border-radius: 10px;
 }
 
-.campoTexto::placeholder {
+.campoTexto::placeholder, .campoBuscar::placeholder, .campoPesquisar::placeholder {
   color: #000;
   font-weight: 500;
 }
@@ -24,30 +24,39 @@
   text-indent: 10px;
 }
 
-.icone-de-busca {
-  background: #90AFC1 url("../../search.svg") no-repeat 10px;
+.icone-de-pesquisa {
+  position: absolute;
+  margin-left: 10px;
 }
 
 .campoBuscar {
   width: 100px;
   height: 20px;
-  position: relative;
-  top: 25px;
-  background-size: 10px;
+  border: none;
+  border-radius: 10px;
+  margin-left: 10px;
+  padding-left: 25px;
+  background-color: #90AFC1;
 }
 
 .divPesquisar {
-  display: flex;
+  display: block;
+  text-align: right;
   width: 1200px;
-  justify-content: flex-end;
 }
 
 .campoPesquisar {
   width: 180px;
+  height: 40px;
   text-align: left;
-  text-indent: 30px;
+  background-color: #90AFC1;
+  border: none;
   border-radius: 15px;
-  background-size: 15px;
   margin-bottom: 5px;
+  padding-left: 40px;
+}
+
+.divPesquisar > .icone-de-pesquisa {
+  margin-top: 8px;
 }
 
